--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
 
     defaultConfig {
         applicationId "com.codepath.apps.restclienttemplate"
-        minSdkVersion 17
+        minSdkVersion 21
         targetSdkVersion 27
 
         // Room schemas
@@ -39,7 +39,6 @@ dependencies {
     implementation 'jp.wasabeef:glide-transformations:4.0.1'
     implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
 
-
     // Android Async Http for sending async network requests
     implementation 'com.loopj.android:android-async-http:1.4.9'
 
@@ -52,4 +51,9 @@ dependencies {
 
     implementation 'com.android.support:support-v4:27.1.1'
 
+    // for passing Tweets between activities
+    implementation 'org.parceler:parceler-api:1.1.11'
+    annotationProcessor 'org.parceler:parceler:1.1.11'
+
+    implementation 'com.android.support:design:27.1.1'
 }
